--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -3,6 +3,7 @@
 <!-- https://www.w3schools.com/howto/howto_website.asp -->
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<script src="scripts/vars.js"></script>
 	<script src="scripts/build.js"></script>
 	<script src="scripts/scratch.js"></script>
 </head>
@@ -10,9 +11,9 @@
 <header>
 	<div class="centered">
 		<a>[</a>
-		<a class="split" href=#>work</a>
+		<a class="split" href=# onclick="setPath('work')">work</a>
 		<a>|</a>
-		<a class="split" href=#>life</a>
+		<a class="split" href=# onclick="setPath('life')">life</a>
 		<a>]</a>
 	</div>
 </header>
