--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -2,10 +2,11 @@
 <meta charset="UTF-8">
 <!-- https://www.w3schools.com/howto/howto_website.asp -->
 <head>
-	<link rel="stylesheet" href="styles.css">
 	<script src="scripts/vars.js"></script>
 	<script src="scripts/build.js"></script>
 	<script src="scripts/scratch.js"></script>
+	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
 </head>
 <body>
 <header>
