try dynamic menu

--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -15,7 +15,7 @@
 		<a class="split" href=# onclick="setPath('work')">work</a>
 		<a>|</a>
 		<!-- testing with this life option -->
-		<a class="split" href=# onclick="ajaxLoad('xml/career.xml',buildMenu,'xml/loadMenu.xsl')">life</a>
+		<a class="split" href=# onclick="ajaxLoad('xml/career.xml',buildMenu,'xml/loadMenu.xsl',['#'])">life</a>
 		<!-- <a class="split" href=# onclick="setPath('life')">life</a> -->
 		<a>]</a>
 	</div>
