--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -12,7 +12,7 @@
 <header>
 	<div class="centered">
 		<a>[</a>
-		<a class="split" href=# onclick="setPath('work')">work</a>
+		<a class="split" href=# onclick="setPath('work'); ajaxLoad('xml/career.xml',buildMenu,'xml/loadMenu.xsl',['#'])">work</a>
 		<a>|</a>
 		<!-- testing with this life option -->
 		<a class="split" href=# onclick="ajaxLoad('xml/career.xml',buildMenu,'xml/loadMenu.xsl',['#'])">life</a>
