--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -13,9 +13,9 @@
 <header>
 	<div class="centered">
 		<span>[</span>
-		<a class="split" href=# onclick="setPath('work'); ajaxLoad('xml/career.xml',buildMenu,'xml/loadMenu.xsl',['#'])">work</a>
+		<a class="split" href=# onclick="setPath('work'); ajaxLoad(xmlpath,buildMenu,'xml/loadMenu.xsl',['#'])">work</a>
 		<span>|</span>
-		<a class="split" href=# onclick="setPath('life'); ajaxLoad('xml/leisure.xml',buildMenu,'xml/loadMenu.xsl',['#'])">life</a>
+		<a class="split" href=# onclick="setPath('life'); ajaxLoad(xmlpath,buildMenu,'xml/loadMenu.xsl',['#'])">life</a>
 		<span>]</span>
 	</div>
 </header>
