--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -4,7 +4,7 @@
 <head>
 	<script src="scripts/vars.js"></script>
 	<script src="scripts/build.js"></script>
-	<script src="scripts/scratch.js"></script>
+	<script src="scripts/effects.js"></script>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
 </head>
