--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -14,9 +14,9 @@
 <header>
 	<div class="centered">
 		<span>[</span>
-		<a class="split" href=# onclick="setPath('work'); ajaxLoad(xmlpath,buildMenu,'xml/loadMenu.xsl',['#'])">work</a>
+		<a class="split" href=# onclick="bounceUp(); setPath('work'); ajaxLoad(xmlpath,buildMenu,'xml/loadMenu.xsl',['#'])">work</a>
 		<span>|</span>
-		<a class="split" href=# onclick="setPath('life'); ajaxLoad(xmlpath,buildMenu,'xml/loadMenu.xsl',['#'])">life</a>
+		<a class="split" href=# onclick="bounceUp(); setPath('life'); ajaxLoad(xmlpath,buildMenu,'xml/loadMenu.xsl',['#'])">life</a>
 		<span>]</span>
 	</div>
 </header>
