--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -16,9 +16,9 @@
 <header>
 	<div class="centered">
 		<span>[</span>
-		<a class="split" href=# onclick="setPath('work'); jBounceUp(); ajaxLoad(xmlpath,buildMenu,'xml/loadMenu.xsl',['#'])">work</a>
+		<a class="split" href=# onclick="setPath('work'); jBounceUp()">work</a>
 		<span>|</span>
-		<a class="split" href=# onclick="setPath('life'); jBounceUp(); ajaxLoad(xmlpath,buildMenu,'xml/loadMenu.xsl',['#'])">life</a>
+		<a class="split" href=# onclick="setPath('life'); jBounceUp()">life</a>
 		<span>]</span>
 	</div>
 </header>
