--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<header>
+<header class="down">
 	<div class="centered">
 		<span>[</span>
 		<a class="split" href=# onclick="setPath('work'); jBounceUp()">work</a>
