--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -10,6 +10,7 @@
 	<script src="scripts/jQueryEffects.js"></script>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 
