--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -31,6 +31,13 @@
 	<nav id="menu"></nav>
 </div>
 <footer>
+	<p class="footlinks">
+		<a>resume</a>
+		<span>|</span>
+		<a>github</a>
+		<span>|</span>
+		<a>linkedin</a>
+	</p>
 	<p>powered by andrewdhope's own noggin &copy; 2019</p>
 </footer>
 
