--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -32,7 +32,7 @@
 </div>
 <footer>
 	<p class="footlinks">
-		<a>resume</a>
+		<a>resum&eactue;</a>
 		<span>|</span>
 		<a>github</a>
 		<span>|</span>
