--- a/siteprep/index.html
+++ b/siteprep/index.html
@@ -32,9 +32,9 @@
 </div>
 <footer>
 	<p class="footlinks">
-		<a>resum&eacute;</a>
+		<a href="./docs/Andrew_Hope_Resume-Analytics.pdf" target="_blank">resum&eacute;</a>
 		<span>|</span>
-		<a>github</a>
+		<a href="https://github.com/Andrewdhope/" target="_blank">github</a>
 		<span>|</span>
 		<a>linkedin</a>
 	</p>
