--- a/worklife/index.html
+++ b/worklife/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-<meta charset="UTF-8">
 <head>
+	<meta charset="UTF-8">
+	<title>worklife</title>
 	<script src="scripts/vars.js"></script>
 	<script src="scripts/build.js"></script>
 	<script src="scripts/effects.js"></script>
 	<script src="scripts/jQueryEffects.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link type="text/css" rel="stylesheet" href="styles.css"/>
+	<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu"/>
+	<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 </head>
+
 <body>
 
 <header class="down">
@@ -42,4 +44,5 @@
 </footer>
 
 </body>
+
 </html>
