--- a/worklife/index.html
+++ b/worklife/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>worklife</title>
+	<title>andrewdhope</title>
+	<!-- <title>worklife</title> -->
 	<script src="scripts/vars.js"></script>
 	<script src="scripts/build.js"></script>
 	<script src="scripts/effects.js"></script>
