--- a/worklife/index.html
+++ b/worklife/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>andrewdhope</title>
-	<!-- <title>worklife</title> -->
+	<title>andrewdhope - worklife</title>
 	<script src="scripts/vars.js"></script>
 	<script src="scripts/build.js"></script>
 	<script src="scripts/effects.js"></script>
