--- a/worklife/index.html
+++ b/worklife/index.html
@@ -11,7 +11,7 @@
 	<link type="text/css" rel="stylesheet" href="styles.css"/>
 	<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu"/>
 	<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-	<link type="image/x-icon" rel="icon" href="/icons/favicon.ico" />
+	<link type="image/x-icon" rel="icon" href="/icons/favicon.ico" /> <!-- http://www.xiconeditor.com/ -->
 </head>
 
 <body>
