--- a/worklife/index.html
+++ b/worklife/index.html
@@ -41,7 +41,7 @@
 		<span>|</span>
 		<a href="https://github.com/Andrewdhope/" target="_blank">github</a>		
 	</p>
-	<p class="copyright">powered by andrewdhope's own noggin &copy; 2019</p>
+	<p class="copyright">powered by andrewdhope's own noggin <a href="https://analytics.google.com" target="_blank" class="ga">&copy;</a> 2019</p>	
 </footer>
 
 </body>
