--- a/worklife/index.html
+++ b/worklife/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>andrewdhope - worklife</title>
 	<script src="scripts/vars.js"></script>
 	<script src="scripts/build.js"></script>
