--- a/worklife/index.html
+++ b/worklife/index.html
@@ -18,11 +18,14 @@
 <body>
 
 <header class="down">
+
+	<!-- testing grounds -->
 	<div class="title">andrewdhope</div>
 	<div class="subtitle">
 		<a id="subtitle-left" style="">data engineer</a>
-        <a id="subtitle-right">digital health</a>
+        <a id="subtitle-right">digital healthcare</a>
 	</div>
+	
 	<div class="centered">
 		<span>[</span>
 		<a class="split" href=# onclick="setPath('work'); jBounceUp()">work</a>
