--- a/worklife/index.html
+++ b/worklife/index.html
@@ -20,11 +20,11 @@
 <header class="down">
 
 	<!-- testing grounds -->
-	<div class="title">andrewdhope</div>
-	<div class="subtitle">
-		<a id="subtitle-left" style="">data engineer</a>
-        <a id="subtitle-right">digital healthcare</a>
+	<div id="titlewrap">
+		<div class="title">andrewdhope</div>
+		<span class="subtitle" style="">data engineer. digital healthcare.</span>
 	</div>
+	<
 	
 	<div class="centered">
 		<span>[</span>
