--- a/worklife/index.html
+++ b/worklife/index.html
@@ -36,8 +36,9 @@
 		<nav id="menu"></nav>
 	</div>
 	
-	<!-- needed for spacing the footer height -->
+	<!-- needed for spacing the footer height ?
 	<div id="push"></div>
+	-->
 </div>
 
 <footer>
