--- a/worklife/index.html
+++ b/worklife/index.html
@@ -15,7 +15,7 @@
 	<link type="image/x-icon" rel="icon" href="/icons/favicon.ico" /> <!-- http://www.xiconeditor.com/ -->
 </head>
 
-<body>
+<body onload="vhViewport();">
 <div id="wrapper">
 	<header class="down">
 		<div class="title">andrewdhope</div>
